<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:id="@+id/inputNewLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/input_new_login"/>

    <EditText
        android:id="@+id/inputFirstPass"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/input_first_pass"/>

    <EditText
        android:id="@+id/inputRepeatPass"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/input_repeat_pass"/>


    <EditText
        android:id="@+id/inputFullName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/input_full_name"/>

    <EditText
        android:id="@+id/inputDateBirth"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/input_date_birth"/>


    <Button
        android:id="@+id/createNewUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Регистрация"/>


</LinearLayout>